Adds logistical regressions

--- a/analysis/stats_from_storyline.ipynb
+++ b/analysis/stats_from_storyline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -432,55 +432,182 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We need to use GEE (generalized estimating equations) for our logistical model with repeated measures.\n",
-    "\n",
-    "**coming soon!**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in load(gee): object 'gee' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in load(gee): object 'gee' not found\nTraceback:\n",
-      "1. load(gee)"
-     ]
+     "data": {
+      "text/plain": [
+       "Generalized linear mixed model fit by maximum likelihood (Adaptive\n",
+       "  Gauss-Hermite Quadrature, nAGQ = 10) [glmerMod]\n",
+       " Family: binomial  ( logit )\n",
+       "Formula: \n",
+       "cvs_table ~ variable + sim_index + pre + lab_experience + similar_sim +  \n",
+       "    prior_number_virtual_labs + overall.POCC + PC1 + PC2 + (1 |      sid)\n",
+       "   Data: mydata\n",
+       "Control: glmerControl(optimizer = \"bobyqa\")\n",
+       "\n",
+       "     AIC      BIC   logLik deviance df.resid \n",
+       "   636.9    693.8   -305.4    610.9      575 \n",
+       "\n",
+       "Scaled residuals: \n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-2.7511 -0.4307  0.2088  0.3572  2.3885 \n",
+       "\n",
+       "Random effects:\n",
+       " Groups Name        Variance Std.Dev.\n",
+       " sid    (Intercept) 5.991    2.448   \n",
+       "Number of obs: 588, groups:  sid, 147\n",
+       "\n",
+       "Fixed effects:\n",
+       "                          Estimate Std. Error z value Pr(>|z|)   \n",
+       "(Intercept)               -1.20670    1.87139  -0.645  0.51905   \n",
+       "variableConcentration      0.53139    0.36369   1.461  0.14399   \n",
+       "variableSeparation        -0.25492    0.33945  -0.751  0.45267   \n",
+       "variableWidth              0.27038    0.36037   0.750  0.45309   \n",
+       "sim_index2                 0.58583    0.24912   2.352  0.01869 * \n",
+       "pre                        0.74207    0.25651   2.893  0.00382 **\n",
+       "lab_experience1            3.19499    0.97581   3.274  0.00106 **\n",
+       "similar_sim1               0.06512    0.38839   0.168  0.86685   \n",
+       "prior_number_virtual_labs -0.20854    0.31117  -0.670  0.50275   \n",
+       "overall.POCC              -0.08198    0.12046  -0.681  0.49616   \n",
+       "PC1                        0.39246    0.24013   1.634  0.10218   \n",
+       "PC2                        0.65777    0.29740   2.212  0.02699 * \n",
+       "---\n",
+       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+       "\n",
+       "Correlation of Fixed Effects:\n",
+       "            (Intr) vrblCn vrblSp vrblWd sm_nd2 pre    lb_xp1 smlr_1 prr___\n",
+       "vrblCncntrt -0.108                                                        \n",
+       "variblSprtn -0.086  0.465                                                 \n",
+       "variablWdth -0.103  0.545  0.470                                          \n",
+       "sim_index2  -0.077  0.029 -0.019  0.019                                   \n",
+       "pre         -0.026  0.001 -0.039  0.064  0.035                            \n",
+       "lab_exprnc1 -0.335  0.054 -0.012  0.038  0.059  0.074                     \n",
+       "similar_sm1  0.024 -0.292 -0.012 -0.295  0.116  0.107 -0.047              \n",
+       "prr_nmbr_v_ -0.015  0.033  0.004  0.029 -0.033 -0.082 -0.447 -0.135       \n",
+       "overll.POCC -0.884 -0.007  0.002 -0.007 -0.011 -0.042  0.001  0.004 -0.079\n",
+       "PC1          0.423  0.015 -0.010  0.004  0.021  0.017  0.076  0.001 -0.147\n",
+       "PC2          0.276  0.025 -0.012  0.012  0.048  0.035  0.136  0.017 -0.077\n",
+       "            o.POCC PC1   \n",
+       "vrblCncntrt              \n",
+       "variblSprtn              \n",
+       "variablWdth              \n",
+       "sim_index2               \n",
+       "pre                      \n",
+       "lab_exprnc1              \n",
+       "similar_sm1              \n",
+       "prr_nmbr_v_              \n",
+       "overll.POCC              \n",
+       "PC1         -0.450       \n",
+       "PC2         -0.344  0.207"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "load(gee)"
+    "# mydata$variable <- relevel(mydata$variable, \"Width\")\n",
+    "mixed <- glmer(\n",
+    "    cvs_table\n",
+    "    ~ variable + sim_index + pre\n",
+    "    + lab_experience + similar_sim + prior_number_virtual_labs + overall.POCC\n",
+    "    +  PC1 + PC2 + (1 | sid),\n",
+    "           data = mydata, family = binomial, \n",
+    "           control = glmerControl(optimizer = \"bobyqa\"), nAGQ = 10)\n",
+    "\n",
+    "summary(mixed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Generalized linear mixed model fit by maximum likelihood (Adaptive\n",
+       "  Gauss-Hermite Quadrature, nAGQ = 10) [glmerMod]\n",
+       " Family: binomial  ( logit )\n",
+       "Formula: \n",
+       "cvs_graph ~ variable + sim_index + pre + lab_experience + similar_sim +  \n",
+       "    prior_number_virtual_labs + overall.POCC + PC1 + PC2 + (1 |      sid)\n",
+       "   Data: mydata\n",
+       "Control: glmerControl(optimizer = \"bobyqa\")\n",
+       "\n",
+       "     AIC      BIC   logLik deviance df.resid \n",
+       "   605.7    662.6   -289.9    579.7      575 \n",
+       "\n",
+       "Scaled residuals: \n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-2.0994 -0.3173 -0.1006  0.3446  2.8043 \n",
+       "\n",
+       "Random effects:\n",
+       " Groups Name        Variance Std.Dev.\n",
+       " sid    (Intercept) 10.38    3.222   \n",
+       "Number of obs: 588, groups:  sid, 147\n",
+       "\n",
+       "Fixed effects:\n",
+       "                          Estimate Std. Error z value Pr(>|z|)    \n",
+       "(Intercept)                -6.0676     2.3957  -2.533  0.01132 *  \n",
+       "variableConcentration       0.7346     0.4053   1.812  0.06994 .  \n",
+       "variableSeparation         -0.1027     0.3733  -0.275  0.78319    \n",
+       "variableWidth               0.2719     0.3991   0.681  0.49573    \n",
+       "sim_index2                  1.2961     0.2909   4.455 8.38e-06 ***\n",
+       "pre                         0.4933     0.2634   1.873  0.06111 .  \n",
+       "lab_experience1             4.0788     1.3884   2.938  0.00331 ** \n",
+       "similar_sim1               -0.1448     0.4373  -0.331  0.74054    \n",
+       "prior_number_virtual_labs   0.2377     0.3908   0.608  0.54308    \n",
+       "overall.POCC                0.0331     0.1476   0.224  0.82252    \n",
+       "PC1                         0.1045     0.3008   0.347  0.72836    \n",
+       "PC2                         0.6465     0.3676   1.759  0.07863 .  \n",
+       "---\n",
+       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+       "\n",
+       "Correlation of Fixed Effects:\n",
+       "            (Intr) vrblCn vrblSp vrblWd sm_nd2 pre    lb_xp1 smlr_1 prr___\n",
+       "vrblCncntrt -0.131                                                        \n",
+       "variblSprtn -0.072  0.467                                                 \n",
+       "variablWdth -0.107  0.572  0.472                                          \n",
+       "sim_index2  -0.151  0.147 -0.009  0.111                                   \n",
+       "pre         -0.018 -0.084 -0.051 -0.002  0.056                            \n",
+       "lab_exprnc1 -0.424  0.078 -0.004  0.049  0.120  0.046                     \n",
+       "similar_sm1  0.043 -0.305 -0.012 -0.294  0.040  0.131 -0.051              \n",
+       "prr_nmbr_v_ -0.024  0.037  0.001  0.027  0.005 -0.067 -0.386 -0.138       \n",
+       "overll.POCC -0.835 -0.001 -0.002 -0.007  0.004 -0.042 -0.014 -0.004 -0.074\n",
+       "PC1          0.381  0.010 -0.003  0.003  0.013 -0.001  0.056  0.002 -0.129\n",
+       "PC2          0.198  0.036 -0.006  0.021  0.077  0.024  0.105 -0.009 -0.023\n",
+       "            o.POCC PC1   \n",
+       "vrblCncntrt              \n",
+       "variblSprtn              \n",
+       "variablWdth              \n",
+       "sim_index2               \n",
+       "pre                      \n",
+       "lab_exprnc1              \n",
+       "similar_sm1              \n",
+       "prr_nmbr_v_              \n",
+       "overll.POCC              \n",
+       "PC1         -0.432       \n",
+       "PC2         -0.296  0.170"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "gm1 <- gee(cvs_table ~ variable + sim_index + pre\n",
+    "mixed <- glmer(\n",
+    "    cvs_graph\n",
+    "    ~ variable + sim_index + pre\n",
     "    + lab_experience + similar_sim + prior_number_virtual_labs + overall.POCC\n",
-    "    +  PC1 + PC2, id=sid, data=mydata)\n",
-    "summary(gm1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gm2 <- gee(cvs_graph ~ variable + sim_index + pre\n",
-    "    + lab_experience + similar_sim + prior_number_virtual_labs + overall.POCC\n",
-    "    +  PC1 + PC2, id=sid, data=mydata)\n",
-    "summary(gm2)"
+    "    +  PC1 + PC2 + (1 | sid),\n",
+    "           data = mydata, family = binomial, \n",
+    "           control = glmerControl(optimizer = \"bobyqa\"), nAGQ = 10)\n",
+    "\n",
+    "summary(mixed)"
    ]
   }
  ],
