Adds post hocs graphs

--- a/analysis/stats_from_storyline.ipynb
+++ b/analysis/stats_from_storyline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
     "hidePrompt": true
    },
    "source": [
-    "## Stat model 1: Predicting main model scores"
+    "# Stat model 1: Predicting main model scores"
    ]
   },
   {
@@ -285,7 +285,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filtering data\n",
     "**Should we remove students with max pre for a certain variables???**"
    ]
   },
@@ -293,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Results"
+    "# model results"
    ]
   },
   {
@@ -365,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -422,6 +421,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Error: sid\n",
+       "                           Df Sum Sq Mean Sq F value Pr(>F)   \n",
+       "cvs_table                   1   0.05  0.0542   0.132 0.7167   \n",
+       "cvs_graph                   1   2.04  2.0383   4.977 0.0273 * \n",
+       "main                        1   2.98  2.9769   7.269 0.0079 **\n",
+       "pre                         1   0.50  0.4975   1.215 0.2723   \n",
+       "lab_experience              1   0.10  0.1046   0.256 0.6140   \n",
+       "similar_sim                 1   0.51  0.5054   1.234 0.2686   \n",
+       "prior_number_virtual_labs   1   1.93  1.9331   4.720 0.0315 * \n",
+       "overall.POCC                1   0.26  0.2623   0.641 0.4249   \n",
+       "PC1                         1   0.05  0.0464   0.113 0.7370   \n",
+       "PC2                         1   0.31  0.3074   0.751 0.3878   \n",
+       "Residuals                 136  55.70  0.4095                  \n",
+       "---\n",
+       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+       "\n",
+       "Error: sid:variable\n",
+       "             Df Sum Sq Mean Sq F value   Pr(>F)    \n",
+       "cvs_table     1   0.06   0.056   0.436   0.5096    \n",
+       "cvs_graph     1   0.24   0.240   1.875   0.1716    \n",
+       "main          1   4.51   4.512  35.302 5.82e-09 ***\n",
+       "variable      3   0.79   0.263   2.058   0.1052    \n",
+       "sim_index     1   0.03   0.028   0.222   0.6380    \n",
+       "pre           1   0.31   0.314   2.460   0.1175    \n",
+       "similar_sim   1   0.84   0.845   6.608   0.0105 *  \n",
+       "Residuals   432  55.22   0.128                     \n",
+       "---\n",
+       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "am2 <- aov(quant_score\n",
+    "    ~  cvs_table + cvs_graph + main + variable + sim_index + pre\n",
+    "    + lab_experience + similar_sim + prior_number_virtual_labs + overall.POCC\n",
+    "    +  PC1 + PC2 + Error(sid/variable), data=mydata)\n",
+    "summary(am2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "hideCode": true,
@@ -433,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
