Adds small fixes

--- a/analysis/stats_from_storyline.ipynb
+++ b/analysis/stats_from_storyline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -289,15 +289,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# model results"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -359,12 +352,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stat model 2: Predicting transfer data"
+    "## Repeat to compare cvs_table to cvs_graph\n",
+    "We rerun the model for all students who did cvs_table to see if doing cvs_graph actually helps more."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'bindrcpp' was built under R version 3.4.4\"Warning message in aov(main ~ cvs_graph + variable + sim_index + pre + lab_experience + :\n",
+      "\"Error() model is singular\""
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Error: sid\n",
+       "                           Df Sum Sq Mean Sq F value   Pr(>F)    \n",
+       "cvs_graph                   1   6.27   6.267  11.616 0.000915 ***\n",
+       "variable                    3   2.54   0.847   1.571 0.200569    \n",
+       "sim_index                   1   1.53   1.526   2.828 0.095472 .  \n",
+       "pre                         1   5.38   5.377   9.966 0.002058 ** \n",
+       "lab_experience              1   0.02   0.015   0.028 0.867067    \n",
+       "similar_sim                 1   0.07   0.073   0.135 0.713886    \n",
+       "prior_number_virtual_labs   1   0.01   0.007   0.014 0.906797    \n",
+       "overall.POCC                1   0.67   0.672   1.246 0.266760    \n",
+       "PC1                         1   0.28   0.276   0.511 0.476288    \n",
+       "PC2                         1   0.05   0.050   0.093 0.761382    \n",
+       "Residuals                 110  59.35   0.540                     \n",
+       "---\n",
+       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+       "\n",
+       "Error: sid:variable\n",
+       "             Df Sum Sq Mean Sq F value  Pr(>F)   \n",
+       "cvs_graph     1   2.19  2.1852   8.293 0.00436 **\n",
+       "variable      3   3.85  1.2837   4.872 0.00265 **\n",
+       "sim_index     1   1.58  1.5830   6.007 0.01501 * \n",
+       "pre           1   1.01  1.0088   3.828 0.05163 . \n",
+       "similar_sim   1   0.48  0.4843   1.838 0.17654   \n",
+       "Residuals   226  59.55  0.2635                   \n",
+       "---\n",
+       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "am1_graph <- aov(main\n",
+    "    ~ cvs_graph + variable + sim_index + pre\n",
+    "    + lab_experience + similar_sim + prior_number_virtual_labs + overall.POCC\n",
+    "    +  PC1 + PC2 + Error(sid/variable), data=filter(mydata, cvs_table == 1))\n",
+    "summary(am1_graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stat model 2: Predicting transfer data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +537,14 @@
     "hidePrompt": true
    },
    "source": [
-    "## Stat model 3: Predicting the use of CVS"
+    "# Stat model 3: Predicting the use of CVS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For cvs_table"
    ]
   },
   {
@@ -569,6 +635,13 @@
     "           control = glmerControl(optimizer = \"bobyqa\"), nAGQ = 10)\n",
     "\n",
     "summary(mixed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For cvs_graph"
    ]
   },
   {
