Attempts different way of doing repeated measures.

--- a/analysis/stats_from_storyline.ipynb
+++ b/analysis/stats_from_storyline.ipynb
@@ -9,9 +9,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "Warning message:\n",
+      "\"package 'ggplot2' was built under R version 3.4.4\"Loading required package: reshape2\n",
+      "Warning message:\n",
+      "\"package 'reshape2' was built under R version 3.4.4\"Loading required package: lme4\n",
+      "Warning message:\n",
+      "\"package 'lme4' was built under R version 3.4.4\"Loading required package: Matrix\n",
+      "Loading required package: compiler\n",
+      "Loading required package: parallel\n",
+      "Loading required package: car\n",
+      "Loading required package: boot\n",
+      "\n",
+      "Attaching package: 'boot'\n",
+      "\n",
+      "The following object is masked from 'package:car':\n",
+      "\n",
+      "    logit\n",
+      "\n",
+      "Loading required package: dplyr\n",
+      "\n",
+      "Attaching package: 'dplyr'\n",
+      "\n",
+      "The following object is masked from 'package:car':\n",
+      "\n",
+      "    recode\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "require(ggplot2)\n",
     "require(reshape2)\n",
@@ -32,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +543,7 @@
     }
    ],
    "source": [
-    "variables <- factor(cbind(\"Width\",\"Area\",\"Concentration\",\"Separation\"))\n",
+    "variables <- factor(c(\"Width\",\"Area\",\"Concentration\",\"Separation\"))\n",
     "measures <- factor(rep(c(\"pre\", \"main\", \"cvs_table\",\"cvs_graph\",\"sim_index\",\"similar_sim\"), c(4,4,4,4,4,4)),\n",
     "levels=c(\"pre\", \"main\", \"cvs_table\",\"cvs_graph\",\"sim_index\",\"similar_sim\"))\n",
     "vars <- ordered(rep(variables, 6))\n",
@@ -511,8 +552,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try repeating this blog: http://psych.wisc.edu/moore/Rpdf/610-R8_OneWayWithin.pdf"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
