added descriptives on table and graph usage

--- a/analysis/activity_descriptors_detector.ipynb
+++ b/analysis/activity_descriptors_detector.ipynb
@@ -22,7 +22,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -87,7 +86,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -469,7 +467,6 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -601,7 +598,6 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "scrolled": false
    },
@@ -1079,7 +1075,6 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1129,7 +1124,6 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1179,7 +1173,6 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "scrolled": true
    },
@@ -1224,7 +1217,6 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1250,7 +1242,6 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1310,7 +1301,6 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1516,7 +1506,6 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1696,9 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "variable_exploration_times = {}\n",
@@ -1712,9 +1699,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import itertools\n",
@@ -1729,9 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1769,7 +1752,6 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1798,9 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1847,9 +1827,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Anaconda2]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Anaconda2]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1861,7 +1841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   },
   "toc": {
    "nav_menu": {},
