Updates stats, fixes bug in CVS model

--- a/analysis/stats_from_storyline.ipynb
+++ b/analysis/stats_from_storyline.ipynb
@@ -9,9 +9,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: mlogit\n",
+      "Loading required package: Formula\n",
+      "Warning message:\n",
+      "\"package 'Formula' was built under R version 3.4.4\"Loading required package: maxLik\n",
+      "Warning message:\n",
+      "\"package 'maxLik' was built under R version 3.4.4\"Loading required package: miscTools\n",
+      "\n",
+      "Please cite the 'maxLik' package as:\n",
+      "Henningsen, Arne and Toomet, Ott (2011). maxLik: A package for maximum likelihood estimation in R. Computational Statistics 26(3), 443-458. DOI 10.1007/s00180-010-0217-1.\n",
+      "\n",
+      "If you have questions, suggestions, or comments regarding the 'maxLik' package, please use a forum or 'tracker' at maxLik's R-Forge site:\n",
+      "https://r-forge.r-project.org/projects/maxlik/\n",
+      "Loading required package: ggplot2\n",
+      "Warning message:\n",
+      "\"package 'ggplot2' was built under R version 3.4.4\"Loading required package: reshape2\n",
+      "Warning message:\n",
+      "\"package 'reshape2' was built under R version 3.4.4\"Loading required package: lme4\n",
+      "Warning message:\n",
+      "\"package 'lme4' was built under R version 3.4.4\"Loading required package: Matrix\n",
+      "Loading required package: compiler\n",
+      "Loading required package: parallel\n",
+      "Loading required package: car\n",
+      "Loading required package: boot\n",
+      "\n",
+      "Attaching package: 'boot'\n",
+      "\n",
+      "The following object is masked from 'package:car':\n",
+      "\n",
+      "    logit\n",
+      "\n",
+      "Loading required package: dplyr\n",
+      "\n",
+      "Attaching package: 'dplyr'\n",
+      "\n",
+      "The following object is masked from 'package:car':\n",
+      "\n",
+      "    recode\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "Loading required package: sjstats\n",
+      "Warning message:\n",
+      "\"package 'sjstats' was built under R version 3.4.4\"Warning message in checkMatrixPackageVersion():\n",
+      "\"Package version inconsistency detected.\n",
+      "TMB was built with Matrix version 1.2.14\n",
+      "Current Matrix version is 1.2.12\n",
+      "Please re-install 'TMB' from source using install.packages('TMB', type = 'source') or ask CRAN for a binary version of 'TMB' matching CRAN's 'Matrix' package\"Loading required package: broom\n",
+      "Warning message:\n",
+      "\"package 'broom' was built under R version 3.4.4\"\n",
+      "Attaching package: 'broom'\n",
+      "\n",
+      "The following object is masked from 'package:sjstats':\n",
+      "\n",
+      "    bootstrap\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## For some reason, when loading mlogit, the notebook can't find package 'statmod' so I specify it's location\n",
     "library(statmod, lib.loc='D:\\\\Applications\\\\Anaconda2\\\\pkgs\\\\r-statmod-1.4.30-r3.4.1_0\\\\lib\\\\R\\\\library\\\\')\n",
@@ -37,12 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_mydata <- read.csv(\"C:\\\\Users\\\\Sarah\\\\Documents\\\\Personal Content\\\\Lab_study_data\\\\all_massaged_data\\\\dataframe_all_factors_for_analysis.txt\",sep = '\\t')\n",
     "# sid is the student number\n",
+    "# we use the \"factor()\" option to make sure R treats them as categorical\n",
     "all_mydata$sid <- factor(all_mydata$sid)\n",
     "all_mydata$sim_index <- factor(all_mydata$sim_index)\n",
     "all_mydata$lab_experience <- factor(all_mydata$lab_experience)\n",
@@ -63,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,16 +251,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'bindrcpp' was built under R version 3.4.4\""
+     ]
+    }
+   ],
    "source": [
     "mydata <- (all_mydata %>% filter(pre < 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -470,8 +548,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -543,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -964,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -1101,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1248,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1388,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1465,29 +1545,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                        est 2.5 % 97.5 %\n",
-      "(Intercept)           0.909 0.375  2.206\n",
-      "main                  3.618 2.109  6.205\n",
-      "cvs_table1            0.762 0.322  1.804\n",
-      "cvs_graph1            0.653 0.259  1.644\n",
-      "variableConcentration 0.992 0.501  1.965\n",
-      "variableSeparation    0.482 0.250  0.931\n",
-      "variableWidth         1.021 0.520  2.004\n",
-      "sim_index2            1.108 0.682  1.799\n",
-      "pre                   1.457 0.771  2.753\n"
+      "                               est    2.5 %   97.5 %\n",
+      "(Intercept)                0.00185 9.73e-05 3.53e-02\n",
+      "variableConcentration      2.25501 9.73e-01 5.23e+00\n",
+      "variableSeparation         0.86758 4.00e-01 1.88e+00\n",
+      "variableWidth              1.18167 5.20e-01 2.68e+00\n",
+      "sim_index2                 2.93582 1.62e+00 5.32e+00\n",
+      "pre                        2.53046 1.16e+00 5.52e+00\n",
+      "lab_experience1           91.27049 4.38e+00 1.90e+03\n",
+      "similar_sim1               0.88842 3.63e-01 2.17e+00\n",
+      "prior_number_virtual_labs  1.48409 6.73e-01 3.27e+00\n"
      ]
     }
    ],
    "source": [
-    "cc <- confint(mixed1,parm=\"beta_\",method=\"Wald\")\n",
-    "ctab <- cbind(est=fixef(mixed1),cc)\n",
+    "cc <- confint(mixed,parm=\"beta_\",method=\"Wald\")\n",
+    "ctab <- cbind(est=fixef(mixed),cc)\n",
     "rtab <- exp(ctab)\n",
     "print(rtab,digits=3)"
    ]
@@ -1517,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1586,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
